{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 412,
  "lineage": "8f513115-a34e-a874-fcb9-a4c3d9708452",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:security-group/sg-0f42b1d11424c2b59",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f42b1d11424c2b59",
            "ingress": [],
            "name": "my_eks_cluster-cluster-20240212125447937300000009",
            "name_prefix": "my_eks_cluster-cluster-",
            "owner_id": "856064652629",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_eks_cluster-cluster"
            },
            "tags_all": {
              "Name": "my_eks_cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-045e111a5f5ea91a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:security-group/sg-0fe69a0aae263e2bf",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0fe69a0aae263e2bf",
            "ingress": [],
            "name": "my_eks_cluster-node-20240212125447932400000008",
            "name_prefix": "my_eks_cluster-node-",
            "owner_id": "856064652629",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_eks_cluster-node",
              "kubernetes.io/cluster/my_eks_cluster": "owned"
            },
            "tags_all": {
              "Name": "my_eks_cluster-node",
              "kubernetes.io/cluster/my_eks_cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-045e111a5f5ea91a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-286334758",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f42b1d11424c2b59",
            "security_group_rule_id": "sgr-0596c816a03433b8b",
            "self": false,
            "source_security_group_id": "sg-0fe69a0aae263e2bf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-291929921",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fe69a0aae263e2bf",
            "security_group_rule_id": "sgr-0aba45ae3fd6e12fc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1889199301",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe69a0aae263e2bf",
            "security_group_rule_id": "sgr-05c89047b6935039c",
            "self": false,
            "source_security_group_id": "sg-0f42b1d11424c2b59",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3755025674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe69a0aae263e2bf",
            "security_group_rule_id": "sgr-0dd048540b0376dd3",
            "self": false,
            "source_security_group_id": "sg-0f42b1d11424c2b59",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-97484477",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe69a0aae263e2bf",
            "security_group_rule_id": "sgr-08ce93ec72564317a",
            "self": false,
            "source_security_group_id": "sg-0f42b1d11424c2b59",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1634618742",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe69a0aae263e2bf",
            "security_group_rule_id": "sgr-0223c49d336c37737",
            "self": false,
            "source_security_group_id": "sg-0f42b1d11424c2b59",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3300287592",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe69a0aae263e2bf",
            "security_group_rule_id": "sgr-09b1262a04b4c4bab",
            "self": false,
            "source_security_group_id": "sg-0f42b1d11424c2b59",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1516699084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe69a0aae263e2bf",
            "security_group_rule_id": "sgr-07354939c389fc924",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4222104024",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe69a0aae263e2bf",
            "security_group_rule_id": "sgr-017991ef07b3231f7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1610060343",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0fe69a0aae263e2bf",
            "security_group_rule_id": "sgr-0d3fa68b4b030af18",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064367efd9a5ce480",
            "domain": "vpc",
            "id": "eipalloc-064367efd9a5ce480",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-126-59-176.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.59.176",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:internet-gateway/igw-0f029f197371325b3",
            "id": "igw-0f029f197371325b3",
            "owner_id": "856064652629",
            "tags": {
              "Name": "EKS_vpc_igw"
            },
            "tags_all": {
              "Name": "EKS_vpc_igw"
            },
            "vpc_id": "vpc-045e111a5f5ea91a8"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064367efd9a5ce480",
            "association_id": "eipassoc-0bfe20c4f466c35d7",
            "connectivity_type": "public",
            "id": "nat-0ff42174a066c053b",
            "network_interface_id": "eni-014df095344714bfb",
            "private_ip": "10.0.3.175",
            "public_ip": "13.126.59.176",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d9872d8e793069d",
            "tags": {
              "Name": "EKS_nat Gateway"
            },
            "tags_all": {
              "Name": "EKS_nat Gateway"
            }
          },
          "dependencies": [
            "module.eks_vpc.aws_eip.nat",
            "module.eks_vpc.aws_subnet.public_subnet_2",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-018e14a230464f1e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ff42174a066c053b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-018e14a230464f1e3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_eip.nat",
            "module.eks_vpc.aws_nat_gateway.eks_nat",
            "module.eks_vpc.aws_route_table.eks_pvt_RT",
            "module.eks_vpc.aws_subnet.public_subnet_2",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_pub_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:route-table/rtb-0202fd189af54700e",
            "id": "rtb-0202fd189af54700e",
            "owner_id": "856064652629",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f029f197371325b3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-045e111a5f5ea91a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_internet_gateway.eks_igw",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_pvt_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:route-table/rtb-018e14a230464f1e3",
            "id": "rtb-018e14a230464f1e3",
            "owner_id": "856064652629",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-045e111a5f5ea91a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfd944f15f3860c3",
            "route_table_id": "rtb-018e14a230464f1e3",
            "subnet_id": "subnet-0e2c5558ebdc6d3ed"
          },
          "dependencies": [
            "module.eks_vpc.aws_route_table.eks_pvt_RT",
            "module.eks_vpc.aws_subnet.private_subnet_1",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e095ae004908da59",
            "route_table_id": "rtb-018e14a230464f1e3",
            "subnet_id": "subnet-0d32dd9dcab460046"
          },
          "dependencies": [
            "module.eks_vpc.aws_route_table.eks_pvt_RT",
            "module.eks_vpc.aws_subnet.private_subnet_2",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac5164049b24d5e9",
            "route_table_id": "rtb-0202fd189af54700e",
            "subnet_id": "subnet-08cd3dae561fd4d84"
          },
          "dependencies": [
            "module.eks_vpc.aws_internet_gateway.eks_igw",
            "module.eks_vpc.aws_route_table.eks_pub_RT",
            "module.eks_vpc.aws_subnet.public_subnet_1",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00909b0c45bef5f25",
            "route_table_id": "rtb-0202fd189af54700e",
            "subnet_id": "subnet-03d9872d8e793069d"
          },
          "dependencies": [
            "module.eks_vpc.aws_internet_gateway.eks_igw",
            "module.eks_vpc.aws_route_table.eks_pub_RT",
            "module.eks_vpc.aws_subnet.public_subnet_2",
            "module.eks_vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:subnet/subnet-0e2c5558ebdc6d3ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2c5558ebdc6d3ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "856064652629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS_private_subnet_1"
            },
            "tags_all": {
              "Name": "EKS_private_subnet_1"
            },
            "vpc_id": "vpc-045e111a5f5ea91a8"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:subnet/subnet-0d32dd9dcab460046",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d32dd9dcab460046",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "856064652629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS_private_subnet_2"
            },
            "tags_all": {
              "Name": "EKS_private_subnet_2"
            },
            "vpc_id": "vpc-045e111a5f5ea91a8"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:subnet/subnet-08cd3dae561fd4d84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cd3dae561fd4d84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856064652629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS_public_subnet_1"
            },
            "tags_all": {
              "Name": "EKS_public_subnet_1"
            },
            "vpc_id": "vpc-045e111a5f5ea91a8"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:subnet/subnet-03d9872d8e793069d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d9872d8e793069d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856064652629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS_public_subnet_2"
            },
            "tags_all": {
              "Name": "EKS_public_subnet_2"
            },
            "vpc_id": "vpc-045e111a5f5ea91a8"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:vpc/vpc-045e111a5f5ea91a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090a7a1f682345780",
            "default_route_table_id": "rtb-05c8faaaf63b61cb9",
            "default_security_group_id": "sg-0275b030224c12121",
            "dhcp_options_id": "dopt-08ac21a54f488b43d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045e111a5f5ea91a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c8faaaf63b61cb9",
            "owner_id": "856064652629",
            "tags": {
              "Name": "EKS_VPC"
            },
            "tags_all": {
              "Name": "EKS_VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jump-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:856064652629:instance/i-077cbd29a43c9bdab",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077cbd29a43c9bdab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e061d382737a4a91",
            "private_dns": "ip-10-0-3-223.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.223",
            "public_dns": "ec2-13-201-21-235.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.21.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-091811baa30efc9ba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0945e9b338e8c455a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d9872d8e793069d",
            "tags": {
              "Name": "jump-server"
            },
            "tags_all": {
              "Name": "jump-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0945e9b338e8c455a"
            ]
          },
          "dependencies": [
            "module.eks_vpc.aws_subnet.public_subnet_1",
            "module.eks_vpc.aws_subnet.public_subnet_2",
            "module.eks_vpc.aws_vpc.eks_vpc",
            "module.jump-server.aws_security_group.jump_server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.jump-server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:security-group/sg-0945e9b338e8c455a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0945e9b338e8c455a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jump_server_sg",
            "name_prefix": "",
            "owner_id": "856064652629",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-045e111a5f5ea91a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    }
  ]
}